# cli-translate-tool

./: .env.sample  .gitignore  LICENCE  main.py  makefile  pyproject.toml  readme.md
